# AI

./: .gitignore
basic/: README.md  flowers_cnn.py  flowers_data.py  flowers_mlp.py  pyproject.toml  sin_fit.py
cs336/: Cargo.toml  README.md  justfile
cs336/.cargo/: config.toml
cs336/py/: README.md  lec06.py  lec07.md  lec07.py  lec14.py  pyproject.toml  torch_util.py
cs336/src/utils/: accounting.rs  mem.rs  mod.rs  tensor_basic.rs
