[project]
name = "basic-exp"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = ["torch==2.10.0", "torchvision==0.25.0", "matplotlib==3.10.8"]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
