[project]
name = "cs336-py"
version = "0.1.0"
description = "Python experiments for CS336 notes and kernels"
requires-python = ">=3.14"
dependencies = [
    "torch==2.10.0",
    "triton==3.6.0",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
